@startuml
'https://plantuml.com/class-diagram
class Livre
{
    -isbn : chaine
    -titre : chaine
    -nbPages : entier
    -dateParution : date
}
class Auteur
{
    -prenomAuteur : chaine
    -nomAuteur : chaine
}
class Emprunt
{
    -dateEmprunt : Date
    -dateRetour : Date
}
class Utilisateur
{
    -idUtilisateur : entier
    -nomUtilisateur : chaine
    -prenomUtilisateur : chaine
}
Livre "1..*"-->"1..1" Auteur : est écrit par >
Emprunt "0..*"--> "1..1" Utilisateur : est passé par >
Emprunt "0..*"-->"1..1" Livre : est composé de >

@enduml